themes/hugo-tranquilpeak-with-katex/static/css/style.css
/* ... */
acronym,
abbr {
  border-bottom: 1px dotted #5d686f; }

blockquote {
  border-left: 3px solid #5d686f;
  padding: 0 15px;
  font-style: italic;
  margin: 1.5em 0 0; }
  blockquote cite:before {
    content: ' — ';
    padding: 0 0.3em; }
  blockquote > p:first-child {
    margin: 0; }

@media only screen and (max-width: 767px) {
  code {
    font-size: 1.4rem; }
  h1 {
    font-size: 2.6rem; }
  h2 {
    font-size: 2.2rem; }
  h3 {
    font-size: 1.8rem; }
  h4 {
    font-size: 1.6rem; }
  h5 {
    font-size: 1.5rem; }
  h6 {
    font-size: 1.4rem; } }

@media only screen and (min-width: 768px) and (max-width: 1023px) {
  h1 {
    font-size: 2.65rem; }
  h2 {
    font-size: 2.25rem; }
  h3 {
    font-size: 1.85rem; }
  h4 {
    font-size: 1.65rem; }
  h5 {
    font-size: 1.55rem; }
  h6 {
    font-size: 1.45rem; } }

.task-list {
  list-style-type: none; }
  .task-list .task-list-item {
    margin: 0 0.2em 0.25em -1.6em;
    vertical-align: middle; }

pre.code-highlight > code {
  padding: 0;
  margin: 0;
  line-height: inherit; }

#about {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(17, 26, 35, 0);
  text-align: center;
  line-height: 100%;
  overflow-y: auto;
  overflow-x: hidden;
  z-index: 30; }
  #about #about-card {
    position: relative;
    top: -1000px;
    display: block;
    background: white;
    max-width: 400px;
    margin: 15px auto;
    border-radius: 3px;
    padding: 30px 0;
    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
    -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5); }
    #about #about-card #about-btn-close {
      position: absolute;
      top: 15px;
      right: 15px;
      color: #9eabb3;
      cursor: pointer; }
      #about #about-card #about-btn-close:hover {
        color: #738691; }
    #about #about-card #about-card-picture {
      margin-bottom: 15px; }
    #about #about-card #about-card-name {
      margin-top: 0;
      margin-bottom: 20px; }
    #about #about-card #about-card-bio {
      padding: 0 30px;
      margin: 0 0 30px 0; }
    #about #about-card #about-card-job,
    #about #about-card #about-card-location {
      display: inline-block;
      vertical-align: top; }
    #about #about-card #about-card-job,
    #about #about-card #about-card-location,
    #about #about-card #about-card-bio {
      font-size: 1.6rem;
      line-height: 1.9em;
      font-weight: 400;
      color: #5d686f; }

@media only screen and (max-width: 767px) {
  #about #about-card {
    width: 90%; }
    #about #about-card #about-card-job,
    #about #about-card #about-card-location {
      display: block;
      width: calc(100% - 60px);
      padding: 0 30px; }
    #about #about-card #about-card-picture {
      width: 90px;
      height: 90px;
      border-radius: 45px; }
    #about #about-card #about-card-job {
      margin-bottom: 15px; } }

@media only screen and (min-width: 768px) {
  #about #about-card {
    width: 80%; }
    #about #about-card #about-card-picture {
      width: 110px;
      height: 110px;
      border-radius: 55px; }
    #about #about-card #about-card-job,
    #about #about-card #about-card-location {
      display: inline-block;
      width: calc((100% / 2) - 48px); }
    #about #about-card #about-card-job {
      padding: 0 15px 0 30px; }
    #about #about-card #about-card-location {
      padding: 0 30px 0 15px; } }

#blog {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%; }

#bottom-bar {
  display: none;
  position: fixed;
  bottom: 0;
  height: 60px;
  background: white;
  margin: 0;
  border-top: 1px solid #eef2f8;
  padding: 0 15px;
  z-index: 40;
  transition: transform .25s ease-in-out;
  -webkit-transition: -webkit-transform .25s ease-in-out; }

@media only screen and (max-width: 767px) {
  #bottom-bar {
    width: calc(100% - 15px * 2);
    left: 0; }
    #bottom-bar[data-behavior="1"].pushed, #bottom-bar[data-behavior="2"].pushed, #bottom-bar[data-behavior="4"].pushed, #bottom-bar[data-behavior="5"].pushed {
      -webkit-transform: translate3d(250px, 0, 0);
      -moz-transform: translate3d(250px, 0, 0);
      transform: translate3d(250px, 0, 0); }
    #bottom-bar[data-behavior="3"].pushed, #bottom-bar[data-behavior="6"].pushed {
      -webkit-transform: translate3d(75px, 0, 0);
      -moz-transform: translate3d(75px, 0, 0);
      transform: translate3d(75px, 0, 0); } }

@media only screen and (min-width: 768px) and (max-width: 1023px) {
  #bottom-bar[data-behavior="1"], #bottom-bar[data-behavior="2"], #bottom-bar[data-behavior="3"] {
    width: calc(100% - 75px - 15px * 2);
    left: 75px; }
    #bottom-bar[data-behavior="1"].pushed, #bottom-bar[data-behavior="2"].pushed, #bottom-bar[data-behavior="3"].pushed {
      -webkit-transform: translate3d(75px, 0, 0);
      -moz-transform: translate3d(75px, 0, 0);
      transform: translate3d(75px, 0, 0); }
  #bottom-bar[data-behavior="4"], #bottom-bar[data-behavior="5"] {
    width: calc(100% - 15px * 2);
    left: 0; }
    #bottom-bar[data-behavior="4"].pushed, #bottom-bar[data-behavior="5"].pushed {
      -webkit-transform: translate3d(250px, 0, 0);
      -moz-transform: translate3d(250px, 0, 0);
      transform: translate3d(250px, 0, 0); }
  #bottom-bar[data-behavior="6"] {
    width: calc(100% - 15px * 2);
    left: 0; }
    #bottom-bar[data-behavior="6"].pushed {
      -webkit-transform: translate3d(75px, 0, 0);
      -moz-transform: translate3d(75px, 0, 0);
      transform: translate3d(75px, 0, 0); } }
/* ... */

